[package]
name = "hibro"
description = "C2"
version = "0.1.0"
edition = "2021"
authors = [ "https://github.com/iruzo" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9.2"
git2 = "0.17.1"
futures = "0.3.28"
base64 = "0.21.0"
minify-js = "0.5.6"
chrono = "0.4.25"
substring = "1.4.5"
rand = "0.8.5"
once_cell = "1.18.0"
clap = { version = "4.3.17", features = ["cargo", "derive"] }
socks5-server = "0.10.0"
# vfs = "0.9.0" # rust virtual file system
